Next/prev methods no longer wrap. Next/prev controls now fade in and out. Simplified transition logic. Updated readme.

--- a/demos/main.css
+++ b/demos/main.css
@@ -146,66 +146,3 @@ body {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg); }
-
-ol, ul, li {
-  margin: 0;
-  padding: 0;
-  list-style-type: none; }
-
-.o-gallery__item__content img {
-  display: block;
-  width: 100%; }
-
-.demo__container {
-  width: 50%; }
-
-.demo__slideshow {
-  width: 100%;
-  overflow: hidden; }
-
-.demo__gallery__item--thumbnail {
-  display: block;
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
-  background-color: #dfded8; }
-
-.demo__thumbnails {
-  display: none;
-  width: 100%;
-  height: 74px;
-  overflow: hidden;
-  background-color: #333333; }
-
-.demo__slideshow + .demo__thumbnails {
-  margin-top: -4px; }
-
-.demo__thumbnails.o-gallery--js {
-  display: block; }
-
-.demo__thumbnails .o-gallery__item__content {
-  padding: 5px 10px;
-  width: 114px;
-  height: 64px;
-  background-color: #a7a59b; }
-
-.demo__gallery__item--thumbnail {
-  background-color: #000; }
-
-.o-gallery__item--selected .demo__gallery__item--thumbnail {
-  outline: 1px solid #fff; }
-
-.o-gallery__item--selected .demo__gallery__item--thumbnail img {
-  opacity: 0.5; }
-
-.demo__slideshow__poster {
-  display: block;
-  width: 100%;
-  font-family: Arial, Helvetica;
-  font-size: 24px;
-  text-align: center;
-  overflow: hidden;
-  color: #505050;
-  background-color: #777777;
-  height: 400px;
-  line-height: 400px; }
